--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,8 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap"
-			rel="stylesheet"
-		/>
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,400&display=swap" rel="stylesheet" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Foodie</title>
 	</head>
